# ai-stock-picker

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  .ty-migration-output.txt  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  refactor-validation.yml
docs/: README.md  architecture.md  development.md  evidence-and-stability.md  input-formats.md  output-artifact.md  providers.md  trust-boundaries.md
examples/: README.md  generic_cn_candidates.json  us_candidates.json
scripts/: backtest_deepseek.py  deepseek_pick.py  feishu_report.py
scripts/dev/: apply_refactor.py  check.py  coverage_baseline.json  coverage_ratchet.py  maintainability_metrics.py
src/ai_stock_picker/: __init__.py  candidate_contracts.py  candidate_io.py  candidate_models.py  candidate_normalization.py  candidates.py  cli.py  commentary_contract.py  commentary_validation.py  contracts.py  credentials.py  csv_migration.py  hot_sector_v1.py  prompting.py  providers.py  selection.py  storage.py  time_utils.py
src/stock_analysis/: __init__.py  _compat.py  cli.py  preliminary_selection.py
src/stock_analysis/ai_lab/: __init__.py  alias_contracts.py  bundle_paths.py  candidates.py  commentary_contract.py  commentary_validation.py  contracts.py  credentials.py  evidence.py  evidence_consistency.py  evidence_contracts.py  frozen_plan.py  inference_config.py  plan_policies.py  prompting.py  providers.py  ranking_policy.py  ranking_policy_contract.py  request_validation.py  response_parser.py  risk_veto.py  selection.py  selection_persistence.py  shadow_campaign.py  shadow_contract.py  shadow_exchange_validation.py  shadow_lineage.py  shadow_lineage_validation.py  shadow_policy_validation.py  shadow_validation.py  shadow_validation_support.py  stability_support.py
src/stock_analysis/ai_lab/backtest/: __init__.py  quarterly_ai_pick.py
src/stock_analysis/ai_lab/selection/: __init__.py  ai_stock_pick.py
src/stock_analysis/app/: __init__.py  cli.py
src/stock_analysis/backtest/: __init__.py  engine.py  prep.py
src/stock_analysis/backtest/strategies/: __init__.py  benchmark_spy.py  pe_sector_alpha.py  quarterly_ai_pick.py  quarterly_unpicked.py
src/stock_analysis/broker/: __init__.py  _stubs.py  longport_client.py
src/stock_analysis/commands/: ai_pick.py  backtest.py  lb_account.py  lb_quote.py  lb_rebalance.py  load_data.py  preliminary.py  targets.py
src/stock_analysis/contracts/: __init__.py  portfolio_json.py  targets.py
src/stock_analysis/execution/broker/: longport_client.py
src/stock_analysis/execution/renderers/: diff.py  jsonout.py  table.py
src/stock_analysis/execution/services/: account_snapshot.py  rebalancer.py
src/stock_analysis/renderers/: diff.py  jsonout.py  table.py
src/stock_analysis/research/backtest/: engine.py
src/stock_analysis/research/backtest/strategies/: benchmark_spy.py  pe_sector_alpha.py  quarterly_unpicked.py
src/stock_analysis/services/: account_snapshot.py  rebalancer.py
src/stock_analysis/services/data/: load_data_to_db.py
src/stock_analysis/services/selection/: ai_stock_pick.py  preliminary_selection.py
src/stock_analysis/shared/config/: __init__.py
src/stock_analysis/shared/services/: exports.py
src/stock_analysis/shared/services/marketdata/: risk_free.py
src/stock_analysis/utils/: portfolio_json.py  targets.py
tests/: conftest.py  test_bounded_ranking_profile.py  test_candidate_snapshot_guard.py  test_candidate_v2_contract.py  test_candidates.py  test_cli.py  test_commentary_contract.py  test_contract_info_cli.py  test_coverage_ratchet.py  test_credentials.py  test_csv_migration.py  test_evidence.py  test_frozen_execution_contracts.py  test_opaque_pick_plan.py  test_prompt_profiles.py  test_providers.py  test_selection.py  test_shadow_campaign.py  test_shadow_lineage.py  test_shadow_v3_and_risk_veto.py  test_storage.py  test_v4_inference.py
tests/e2e/: test_cli_lb_e2e.py  test_cli_smoke.py
tests/integration/: test_price_data_completeness.py
tests/unit/: test_ai_result_parsing.py  test_cli_lb_commands.py  test_deepseek_credentials.py  test_load_data_branches.py  test_longbridge_static.py  test_maintainability_metrics.py  test_pe_sector_alpha.py  test_rebalancer_helpers.py  test_risk_free_service.py  test_targets_contract.py
