[project]
name = "ai-stock-picker"
version = "0.2.0"
description = "Strict, auditable LLM selection from precomputed stock candidate pools"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = ["pydantic>=2.7,<3", "tzdata>=2025.2"]

[dependency-groups]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pre-commit>=4",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "tomli>=2; python_version < '3.11'",
]

[project.scripts]
aipick = "stock_analysis.app.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stock_analysis*"]

[tool.setuptools.package-data]
stock_analysis = ["py.typed"]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["stock_analysis"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--cov=stock_analysis --cov-report=term-missing --cov-fail-under=75"
testpaths = ["tests"]
markers = ["unit: fast, isolated tests"]
