[project]
name = "ai-stock-picker"
version = "0.3.0"
description = "Provider-neutral, auditable LLM reranking of versioned stock candidate manifests"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = ["pydantic>=2.7,<3", "tzdata>=2025.2"]

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "tomli>=2; python_version < '3.11'",
  "ty==0.0.59",
]

[project.scripts]
aipick = "ai_stock_picker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_stock_picker*"]

[tool.setuptools.package-data]
ai_stock_picker = ["py.typed"]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.10"
root = ["./src", "./scripts", "./tests"]

[tool.ty.src]
include = ["src", "scripts", "tests"]

[tool.ty.analysis]
allowed-unresolved-imports = ["tomli", "tomllib"]

[tool.coverage.run]
branch = true
source = ["ai_stock_picker"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "--cov=ai_stock_picker --cov-report=term-missing --cov-report=json:.coverage.json"
testpaths = ["tests"]
markers = ["unit: fast, isolated tests"]
